--- a/signup.css
+++ b/signup.css
@@ -8,10 +8,6 @@ body {
   width: 100%;
   overflow: hidden;
 }
-h2 {
-  margin: 0;
-  padding: 0;
-}
 
 .container {
   max-width: 900px;
@@ -24,9 +20,6 @@ h2 {
 }
 
 .container h1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -42,14 +35,15 @@ h2 {
 }
 
 .form-group input[type="text"],
-.form-group input[type="password"] {
+.form-group input[type="password"],
+.form-group input[type="email"] {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-.form-group button {
+.form-group button[type="submit"] {
   width: 100%;
   padding: 10px;
   background-color: #a833c5;
@@ -61,14 +55,15 @@ h2 {
   margin: 0 auto;
 }
 
-.form-group button:hover {
+.form-group button[type="submit"]:hover {
   background-color: #8e2ba7;
 }
-.error-message,
-.errorMessage {
-  padding: 0;
-  margin: 0;
+.container {
+  position: relative;
 }
-.signup {
-  text-align: center;
+
+.goBack {
+  position: absolute;
+  top: 35px;
+  right: 475px;
 }
